fix homepage on package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "",
+  "homepage": "http://pdv88.github.io/Meta-Project-Capstone",
   "name": "final-project",
   "version": "0.1.0",
   "private": true,
