fix name of package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://pdv88.github.io/Meta-Project-Capstone",
-  "name": "final-project",
+  "name": "Meta-Project-Capstone",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
